app/src/main/java/com/example/eltory/rejectcall/MainActivity.java
package com.example.eltory.rejectcall;

import android.Manifest;
import android.app.Activity;
import android.app.PendingIntent;
import android.content.BroadcastReceiver;
import android.content.Context;
import android.content.Intent;
import android.content.IntentFilter;
import android.content.SharedPreferences;
import android.content.pm.PackageManager;
import android.os.Build;
import android.support.annotation.NonNull;
import android.support.v4.app.ActivityCompat;
import android.support.v4.content.ContextCompat;
import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;
import android.support.v7.widget.LinearLayoutManager;
import android.support.v7.widget.RecyclerView;
import android.telephony.SmsManager;
import android.util.Log;
import android.view.View;
import android.view.ViewGroup;
import android.widget.Adapter;
import android.widget.Button;
import android.widget.EditText;
import android.widget.ListView;
import android.widget.TextView;
import android.widget.TimePicker;
import android.widget.Toast;


import java.util.ArrayList;
import java.util.HashSet;
import java.util.Set;

import butterknife.BindView;
import butterknife.ButterKnife;

public class MainActivity extends AppCompatActivity {

    public static Context mContext;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        // TODO : splash 프래그먼트로 바꾸기
        // startActivity(new Intent(this, Splash.class));
        setContentView(R.layout.activity_main);

        /*  All Permission check  */
        Permissions permissions = new Permissions();
        permissions.permissionCheck(this);
        
        findViewById(R.id.goOption).setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
                startActivity(new Intent(MainActivity.this, OptionPrefActivity.class));
            }
        });

        Intent serviceIntent = new Intent(this, CallingService_Fragment.class);
        serviceIntent.putExtra("incomingNum", 111111111);
        startService(serviceIntent);
    }
}